what-scale/style.css
* {
    box-sizing: border-box;
    font-family: sans-serif;
    transition: all 0.2s ease-in-out;
}

main {
    display: flex;
    flex-direction: column;
    align-items: center;
}

form {
display: flex;
    flex-direction: column;
    align-items: center;
}

form * {
    margin: 1em 0;
}

form input {
    border: solid 1px grey;
    border-radius: 5px;
    padding: 0.8em 0.4em;
}

form input:focus {
    outline: none;
}

form button {
    border: solid transparent;
    color: white;
    background-color: blue;
    border-radius: 5px;
    padding: 0.4em 0.8em;
}

form button:active {
    transform: scale(0.99);
}

.content {
    width: 80%;
    text-align: center;
}

.content img {
    border-radius: 10px;
    max-width: 70%;
}

